--- a/index.html
+++ b/index.html
@@ -1,17 +1,46 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>Airline Interview AI (Voice)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Airline Interview AI (Locked Voice)</title>
+  <style>
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial; margin: 18px; }
+    button { padding: 10px 14px; margin-right: 10px; }
+    #status { margin-top: 10px; opacity: 0.85; }
+    #log { margin-top: 10px; white-space: pre-wrap; font-size: 12px; opacity: 0.75; max-height: 40vh; overflow:auto; background:#f6f6f6; padding:10px; border-radius:8px;}
+  </style>
 </head>
 <body>
-  <h1>Airline Interview AI (Voice)</h1>
+  <h1>Airline Interview AI (Locked Voice)</h1>
   <button id="startBtn">Start</button>
   <button id="stopBtn" disabled>Stop</button>
+  <div id="status">Idle</div>
+  <div id="log"></div>
 
-  <script>
-    // ======== 1) YOUR 1:1 PROMPT (INSTRUCTIONS) ========
-    const SYSTEM_PROMPT = `You are a three-member airline interview panel conducting a structured competency-based interview for a pilot position.
+<script>
+/**
+ * LOCKED FLOW:
+ * - Client controls every question in order.
+ * - Calibration cannot be skipped.
+ * - No “difficult passenger” question exists at all.
+ * - Model cannot freestyle because create_response=false.
+ */
+
+const startBtn = document.getElementById("startBtn");
+const stopBtn  = document.getElementById("stopBtn");
+const statusEl = document.getElementById("status");
+const logEl    = document.getElementById("log");
+const setStatus = (s) => statusEl.textContent = s;
+const log = (s) => { logEl.textContent = (logEl.textContent + s + "\n").slice(-8000); };
+
+let pc = null;
+let dc = null;
+let localStream = null;
+let audioEl = null;
+
+// ====== YOUR PROMPT 1:1 (as provided) ======
+const SYSTEM_PROMPT = `You are a three-member airline interview panel conducting a structured competency-based interview for a pilot position.
 
 This is a realistic interview simulation designed as a training tool for airline job preparation.
 
@@ -338,118 +367,283 @@ No motivational fluff.
 
 End debrief.`;
 
-    // ======== 2) WEBRTC / REALTIME WIRING ========
-    let pc, dc, localStream, audioEl;
+// Control layer prevents the model from inventing its own first question.
+const CONTROL_LAYER = `
+ABSOLUTE CONTROL RULES (must follow exactly):
+- The client will provide the exact next question. You MUST output exactly that question and nothing else.
+- Do NOT invent questions. Do NOT skip calibration. Do NOT reorder phases.
+- Do NOT ask coaching questions like "what are you nervous about" or "what role are you applying for".
+- One question at a time. No filler acknowledgements.
+`;
 
-    const startBtn = document.getElementById("startBtn");
-    const stopBtn = document.getElementById("stopBtn");
+// ----- Client-driven question order (no passenger question anywhere) -----
+const FLOW = { phase: 1, level: null, idx: 0 };
 
-    function sendEvent(obj) {
-      if (!dc || dc.readyState !== "open") return;
-      dc.send(JSON.stringify(obj));
+const Q_CAL = [
+  "What stage are you currently at in your aviation career?",
+  "Approximately how many flight hours do you have?",
+  "Have you previously attended airline interviews?"
+];
+
+const Q_HR = [
+  "Tell me about yourself.",
+  "Why do you want to work for this airline?",
+  "Why should we select you?",
+  "What is one development area you are currently working on?"
+];
+
+const Q_BEH = [
+  "Describe a situation where you had to adhere strictly to rules or SOPs even when it was inconvenient. What was the situation and what did you do?",
+  "Tell us about a time you had to make a difficult decision under uncertainty. What information did you use and how did you decide?",
+  "Describe a situation where you identified a risk others did not fully see. How did you assess it and what action did you take?",
+  "Give an example of a time you had to communicate something critical clearly under time pressure. How did you ensure understanding?",
+  "Describe a situation where teamwork or CRM made a clear difference to the outcome. What was your role and what did you do?",
+  "Tell us about a time you faced high workload or stress. How did you prioritize and manage your tasks?",
+  "Describe a time you made a mistake or your performance fell short. What did you learn and what did you change afterward?",
+  "Describe a time you had to demonstrate professionalism or reliability when it would have been easy to take a shortcut. What did you do and why?"
+];
+
+const Q_TECH_L1 = [
+  "What is the difference between DA and MDA?",
+  "What defines a stabilized approach?",
+  "What is the purpose of a sterile cockpit rule?",
+  "What are the responsibilities of the pilot flying vs pilot monitoring?"
+];
+
+const Q_TECH_L2 = [
+  "What is the difference between V1 and V2?",
+  "What factors affect takeoff performance?",
+  "What is contingency fuel?",
+  "What is threat and error management?",
+  "What is situational awareness and how can it degrade?"
+];
+
+const Q_TECH_L3 = [
+  "What is balanced field length?",
+  "What happens if an engine fails after V1?",
+  "When must a destination alternate be nominated?",
+  "What conditions are most conducive to airframe icing?",
+  "What is RVSM and why is it important?",
+  "What is the difference between CAT I and CAT III approach?"
+];
+
+const Q_MOT = [
+  "Where do you see yourself in five years?",
+  "What do you think will be most challenging about airline life?",
+  "What might cause you to leave an airline?"
+];
+
+function sendEvent(obj){
+  if (dc && dc.readyState === "open") dc.send(JSON.stringify(obj));
+}
+
+function askExact(questionText, prefaceText=null){
+  const instructions = prefaceText
+    ? `${prefaceText}\nAsk EXACTLY this one question next and nothing else:\n${questionText}`
+    : `Ask EXACTLY this one question next and nothing else:\n${questionText}`;
+
+  sendEvent({
+    type: "response.create",
+    response: { modalities: ["audio","text"], instructions }
+  });
+}
+
+function chooseLevel(stageText, hoursText){
+  const t = (stageText + " " + hoursText).toLowerCase();
+  const m = t.match(/(\d{1,6})/);
+  const hours = m ? parseInt(m[1], 10) : null;
+  const advanced = ["cpl","atpl","ir","me","type rating","fo","first officer","captain"].some(k => t.includes(k));
+  if (hours !== null) {
+    if (hours < 250 && !advanced) return 1;
+    if (hours < 1200 && !t.includes("captain")) return 2;
+    return 3;
+  }
+  return advanced ? 2 : 1;
+}
+
+const answers = { stage:"", hours:"", attended:"" };
+
+function currentQuestion(){
+  if (FLOW.phase === 1) return Q_CAL[FLOW.idx] || null;
+  if (FLOW.phase === 2) return Q_HR[FLOW.idx] || null;
+  if (FLOW.phase === 3) return Q_BEH[FLOW.idx] || null;
+  if (FLOW.phase === 4) {
+    const bank = FLOW.level===3 ? Q_TECH_L3 : (FLOW.level===2 ? Q_TECH_L2 : Q_TECH_L1);
+    return bank[FLOW.idx] || null;
+  }
+  if (FLOW.phase === 5) return Q_MOT[FLOW.idx] || null;
+  return null;
+}
+
+function phaseAdvanceIfNeeded(){
+  if (FLOW.phase === 1 && FLOW.idx >= Q_CAL.length) { FLOW.level = chooseLevel(answers.stage, answers.hours); FLOW.phase=2; FLOW.idx=0; return true; }
+  if (FLOW.phase === 2 && FLOW.idx >= Q_HR.length)  { FLOW.phase=3; FLOW.idx=0; return true; }
+  if (FLOW.phase === 3 && FLOW.idx >= Q_BEH.length) { FLOW.phase=4; FLOW.idx=0; return true; }
+  if (FLOW.phase === 4) {
+    const bankLen = (FLOW.level===3 ? Q_TECH_L3.length : (FLOW.level===2 ? Q_TECH_L2.length : Q_TECH_L1.length));
+    if (FLOW.idx >= bankLen) { FLOW.phase=5; FLOW.idx=0; return true; }
+  }
+  if (FLOW.phase === 5 && FLOW.idx >= Q_MOT.length) { FLOW.phase=6; return true; }
+  return false;
+}
+
+function startDebrief(){
+  sendEvent({
+    type: "response.create",
+    response: {
+      modalities: ["audio","text"],
+      instructions:
+`This concludes the interview simulation. We will now move to the debrief.
+Produce the structured debrief strictly following DEBRIEF MODE from the system instructions.`
+    }
+  });
+}
+
+function handleTranscript(text){
+  const t = (text||"").trim();
+  if (!t) {
+    const q = currentQuestion();
+    if (q) askExact(q, "Repeat the same question (no acknowledgements).");
+    return;
+  }
+
+  // store calibration
+  if (FLOW.phase === 1) {
+    if (FLOW.idx === 0) answers.stage = t;
+    if (FLOW.idx === 1) answers.hours = t;
+    if (FLOW.idx === 2) answers.attended = t;
+  }
+
+  FLOW.idx++;
+
+  if (phaseAdvanceIfNeeded()) {
+    if (FLOW.phase === 6) { startDebrief(); return; }
+    if (FLOW.phase === 4) {
+      // required line before technical
+      const q = currentQuestion();
+      askExact(q, "Say exactly: “We will now move to a short technical segment.”");
+      return;
+    }
+  }
+
+  const q = currentQuestion();
+  if (q) askExact(q);
+}
+
+async function getEphemeralKey(){
+  const r = await fetch("/api/realtime-token", { method:"POST" });
+  const j = await r.json().catch(()=>({}));
+  const key = j?.client_secret?.value;
+  if (!key) throw new Error("Missing client_secret.value");
+  return key;
+}
+
+async function start(){
+  startBtn.disabled = true;
+  stopBtn.disabled = false;
+  logEl.textContent = "";
+  setStatus("Starting...");
+
+  // reset
+  FLOW.phase = 1; FLOW.level=null; FLOW.idx=0;
+  answers.stage=""; answers.hours=""; answers.attended="";
+
+  const ephemeralKey = await getEphemeralKey();
+
+  pc = new RTCPeerConnection();
+  audioEl = document.createElement("audio");
+  audioEl.autoplay = true;
+  audioEl.playsInline = true;
+  pc.ontrack = (e) => { audioEl.srcObject = e.streams[0]; };
+
+  localStream = await navigator.mediaDevices.getUserMedia({ audio:true });
+  localStream.getTracks().forEach(t => pc.addTrack(t, localStream));
+
+  dc = pc.createDataChannel("oai-events");
+  dc.onopen = () => {
+    setStatus("Connected. Interview running.");
+
+    // clear conversation and lock session. Important: create_response=false
+    sendEvent({ type:"conversation.clear" });
+
+    sendEvent({
+      type: "session.update",
+      session: {
+        modalities: ["audio","text"],
+        instructions: SYSTEM_PROMPT + "\n\n" + CONTROL_LAYER,
+        voice: "alloy",
+        temperature: 0.2,
+        input_audio_transcription: { model: "gpt-4o-mini-transcribe" },
+        turn_detection: { type: "server_vad", create_response: false }
+      }
+    });
+
+    // kickoff intro + first calibration Q
+    askExact(
+      Q_CAL[0],
+      "Begin now. Say exactly: “We will conduct an airline interview simulation. Please answer using real examples from your experience.”"
+    );
+  };
+
+  dc.onmessage = (ev) => {
+    let msg; try { msg = JSON.parse(ev.data); } catch { return; }
+
+    if (msg.type === "error") log("ERROR: " + JSON.stringify(msg));
+
+    if (msg.type === "conversation.item.input_audio_transcription.completed") {
+      const text = msg.transcript || msg.text || "";
+      log("USER: " + text);
+      handleTranscript(text);
     }
 
-    async function getEphemeralKey() {
-      const r = await fetch("/api/realtime-token", { method: "POST" });
-      const j = await r.json();
-      // expected: { client_secret: { value: "..." } }
-      return j?.client_secret?.value;
+    if (msg.type === "conversation.item.created" && msg.item?.role === "user") {
+      const c0 = msg.item?.content?.[0] || {};
+      const text = c0.text || c0.transcript || "";
+      if (text) {
+        log("USER(item): " + text);
+        handleTranscript(text);
+      }
     }
+  };
 
-    startBtn.onclick = async () => {
-      startBtn.disabled = true;
-      stopBtn.disabled = false;
+  const offer = await pc.createOffer();
+  await pc.setLocalDescription(offer);
 
-      // mic
-      localStream = await navigator.mediaDevices.getUserMedia({ audio: true });
+  const baseUrl = "https://api.openai.com/v1/realtime";
+  const model = "gpt-4o-realtime-preview";
 
-      // peer
-      pc = new RTCPeerConnection();
+  const sdpRes = await fetch(`${baseUrl}?model=${encodeURIComponent(model)}`, {
+    method: "POST",
+    headers: { Authorization: `Bearer ${ephemeralKey}`, "Content-Type": "application/sdp" },
+    body: offer.sdp
+  });
 
-      // play AI audio
-      audioEl = document.createElement("audio");
-      audioEl.autoplay = true;
-      pc.ontrack = (e) => (audioEl.srcObject = e.streams[0]);
+  const answerSdp = await sdpRes.text();
+  await pc.setRemoteDescription({ type:"answer", sdp: answerSdp });
 
-      // send mic
-      for (const track of localStream.getTracks()) {
-        pc.addTrack(track, localStream);
-      }
+  setStatus("Realtime started.");
+}
 
-      // data channel
-      dc = pc.createDataChannel("oai-events");
+function stop(){
+  stopBtn.disabled = true;
+  startBtn.disabled = false;
+  setStatus("Stopped.");
 
-      dc.onopen = async () => {
-        // 1) FORCE your system prompt into the realtime session
-        sendEvent({
-          type: "session.update",
-          session: {
-            instructions: SYSTEM_PROMPT,
-            // voice: "alloy",   // voit vaihtaa jos haluat toisen äänen
-            temperature: 0.4,
-            modalities: ["audio", "text"]
-          }
-        });
+  try { if (dc) dc.close(); } catch {}
+  try { if (pc) pc.close(); } catch {}
+  dc = null; pc = null;
 
-        // 2) HARD KICKOFF: make it start exactly how you want (Phase 1 start line)
-        sendEvent({
-          type: "response.create",
-          response: {
-            modalities: ["audio", "text"],
-            instructions:
-              "Start immediately. Begin exactly with: “We will conduct an airline interview simulation. Please answer using real examples from your experience.” Then ask the three calibration questions one by one.",
-          }
-        });
-      };
+  try { if (localStream) localStream.getTracks().forEach(t=>t.stop()); } catch {}
+  localStream = null;
+}
 
-      dc.onmessage = (e) => {
-        // Optional: see events in console
-        try { console.log("EVT:", JSON.parse(e.data)); } catch {}
-      };
-
-      // SDP offer
-      const offer = await pc.createOffer();
-      await pc.setLocalDescription(offer);
-
-      const ephemeralKey = await getEphemeralKey();
-      if (!ephemeralKey) {
-        alert("No ephemeral key from /api/realtime-token");
-        stopBtn.click();
-        return;
-      }
-
-      const baseUrl = "https://api.openai.com/v1/realtime";
-      const model = "gpt-4o-realtime-preview"; // toimii jos sun setup jo toimi tällä
-
-      const sdpResp = await fetch(`${baseUrl}?model=${model}`, {
-        method: "POST",
-        headers: {
-          "Authorization": `Bearer ${ephemeralKey}`,
-          "Content-Type": "application/sdp"
-        },
-        body: offer.sdp
-      });
-
-      const answerSdp = await sdpResp.text();
-      await pc.setRemoteDescription({ type: "answer", sdp: answerSdp });
-
-      console.log("Realtime interview started");
-    };
-
-    stopBtn.onclick = () => {
-      stopBtn.disabled = true;
-      startBtn.disabled = false;
-
-      try { if (dc) dc.close(); } catch {}
-      try { if (pc) pc.close(); } catch {}
-      dc = null; pc = null;
-
-      if (localStream) {
-        localStream.getTracks().forEach((t) => t.stop());
-        localStream = null;
-      }
-      console.log("Interview stopped");
-    };
-  </script>
+startBtn.onclick = () => start().catch(e => {
+  console.error(e);
+  alert(e?.message || String(e));
+  log("START ERROR: " + (e?.message || String(e)));
+  stop();
+});
+stopBtn.onclick = stop;
+</script>
 </body>
 </html>
