--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Airline Interview AI (Locked Voice)</title>
+  <title>Airline Interview simulator</title>
   <style>
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial; margin: 18px; }
     button { padding: 10px 14px; margin-right: 10px; }
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <h1>Airline Interview AI (Locked Voice)</h1>
+  <h1>Airline Interview simulator</h1>
   <button id="startBtn">Start</button>
   <button id="stopBtn" disabled>Stop</button>
   <div id="status">Idle</div>
