--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>Airline Interview AI 123 (Locked Voice)</title>
+  <title>Airline Interview AI (Locked Voice)</title>
   <style>
     body { font-family: system-ui, Arial, sans-serif; margin: 20px; }
     button { margin-right: 10px; padding: 8px 12px; }
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <h1>Airline Interview AI (Locked Voice)</h1>
+  <h1>Airline Interview AI 123 (Locked Voice)</h1>
 
   <button id="startBtn">Start</button>
   <button id="stopBtn" disabled>Stop</button>
